# verdant-lol

./: .bot-state.json  .env.example  .gitignore  ExternusUI.deps.json  README.md  imgui.ini  index.js  package-lock.json  package.json  server.js
.claude/: settings.local.json
client/executor/: CMakeLists.txt  README.md
client/executor/src/: main.cpp  poller.cpp  poller.hpp  runtime.cpp  runtime.hpp  server.cpp  server.hpp
client/overlay/: CMakeLists.txt  README.md  game.cpp
client/overlay/build-agent/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  verdant_overlay.slnx  verdant_overlay.vcxproj  verdant_overlay.vcxproj.filters
client/overlay/build-agent/verdant_overlay.dir/Release/: verdant_overlay.exe.recipe
client/overlay/build-agent/verdant_overlay.dir/Release/verdant_overlay.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
client/overlay/build-agent/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
client/overlay/build-agent/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
client/overlay/build-agent/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
client/overlay/build-agent/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
client/overlay/build-win/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  verdant_overlay.slnx  verdant_overlay.vcxproj  verdant_overlay.vcxproj.filters
client/overlay/build-win/verdant_overlay.dir/Release/: verdant_overlay.exe.recipe
client/overlay/build-win/verdant_overlay.dir/Release/verdant_overlay.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  verdant_overlay.lastbuildstate
client/overlay/build-win/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
client/overlay/build-win/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
client/overlay/build-win/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
client/overlay/build-win/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
client/overlay/src/: aim_assist.cpp  aim_assist.hpp  camera.hpp  camera_pipeline_example.hpp  camera_update.hpp  chat.cpp  chat.hpp  client.cpp  explorer.cpp  explorer.hpp  game.hpp  http.cpp  http.hpp  hud_painter.cpp  hud_painter.hpp  hud_state.hpp  main.cpp  memory.cpp  memory.hpp  offsets.hpp  overlay.cpp  overlay.hpp  overlay_input_adapter.cpp  overlay_input_adapter.hpp  overlay_theme.hpp  process.cpp  process.hpp  target_assist.hpp  utils.hpp  win32_mouse_input.cpp  win32_mouse_input.hpp
config/: store-products.json
deploy/: horii-index.html  nginx-security-headers-horii-embed.conf  nginx-verdant-api.example.conf
lib/: dashboardNotifications.js  licenseExpiry.js  storeCatalog.js  storefrontImageUrl.js
mod-menu/: MA_FH5Trainer.sln  UpgradeLog.htm
scripts/: RUN-remove-VerdantKM-og-testmodus.bat  bulk-seed-orders.js  deploy-web.ps1  download-vigem-dll.js  executor-daemon.js  executor-stub.js  fix-horii-encoding.py  issue-compensation-key.js  (+16 more)
(+227 files in other folders)
